# emdebug

./: .travis.yml  AUTHORS  CMakeLists.txt  README  README.md
src/: ctrlexe.cpp  ctrlexe.h  gdbmi.cpp  gdbmi.h  main.cpp  simple_exception.cpp  simple_exception.h
